--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,25 @@
 ::after{
     box-sizing: inherit;
 }
+
+.displayDiv{
+    background-color: gray;
+    width:500px;
+    height:500px;
+    display: grid;
+    margin: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.displayDivCell{
+    background-color: white;
+    margin:10px;
+
+    /*center*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 50px;
+}
